[package]
name = "etherealog"
version = "0.1.0"
edition = "2024"

[dependencies]
revm = { version = "20.0.0", features = ["alloydb", "serde-json"] }
revm-trace = { version = "2.0.5", default-features = false, features = ["rustls-tls"] }
alloy-consensus = "0.12"
alloy-eips = "0.12"
alloy-provider = "0.12"
indicatif = "0.17.11"
alloy = { version = "0.12", features = ["full"] }

tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.96"
