[package]
name = "services"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
revm = { version = "22", features = ["serde-json"] }

rocket = { version = "0.5.1", features = ["json"] }
rocket_okapi = { version = "0.9.0", features = ["swagger", "rapidoc"] }
serde = { version = "1.0.219", features = ["derive"] }
schemars = "0.8.22"
